[package]
name = "bmos2"
version = "0.1.0"
authors = ["Glenn Pierce <glenn.pierce@carnegosystems.com>"]

[dependencies]
time = "0.1.36"
chrono = "0.2"
futures = "0.1.9"
hyper = { git = "https://github.com/hyperium/hyper.git" } 
byteorder = "0.3"
pretty_env_logger = "0.1.0"
getopts = "0.2"
env_logger = "0.4.0"
log = "0.3.1"
slab = "0.3.0"
mio = { git = "https://github.com/carllerche/mio" }
rustc-serialize = "0.3"
toml = "*"
clap = "1.2.5"
postgres = "0.13"
bincode = "0.6"
serde = "0.8"
serde_derive = "0.8"
systemd = "0.*"

[dependencies.rusqlite]
version = "0.9.5"
features = ["chrono"]


[[bin]]
name = "bmosserver"
path = "src/main.rs"

[[bin]]
name = "bmosclient"
path = "src/bmos_client.rs"

[[bin]]
name = "bmos_importer_example"
path = "src/bmos_importer_example.rs"